--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 * {
   margin: 0px;
   padding: 0px;
-  font-family: "Ubuntu" !important;
+  font-family: "Lora" !important;
   box-sizing: border-box;
 }
 body {
@@ -11,16 +10,19 @@ body {
   padding-bottom: 30px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("https://images.unsplash.com/photo-1487089427585-85563b1049f3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80");
+  background-image: url("https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80");
 }
 .Box {
-  max-width: 600px;
+  max-width: 700px;
   margin: 0 auto;
   padding: 30px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 10px;
   position: relative;
   background-color: rgb(255, 255, 255);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .generate-button .MuiButton-endIcon {
   display: none;
