--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,7 @@
 body {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url("https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80");
+  background-image: url("./assets/asdf.jpg");
 }
 .Box {
   max-width: 700px;
